# 2048

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Model/: Box.cpp  Box.h  Case.cpp  Case.h  Coordinates.cpp  Coordinates.h  Direction.h  Game.cpp  Game.h  GameState.h  Grid.cpp  Grid.h  Grille.cpp  Grille.h  Observable.cpp  Observable.h  Observer.h
ViewModel/: CaseVM.cpp  CaseVM.h  GameVM.cpp  GameVM.h  GrilleVM.cpp  GrilleVM.h
Vue/: ConsoleVue.cpp  ConsoleVue.h  IVue.cpp  IVue.h
Vue/Game/: ConsoleGame.cpp  ConsoleGame.h  ConsoleGrille.cpp  ConsoleGrille.h
